# mc-terrain-repair

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: vocab.json
repair_cases/Beach/: case.json  known_height.npy  known_material.npy  known_support.npy  mask.npy  metadata.json  target_height.npy  target_material.npy  target_support.npy
repair_cases/Fill-Ravine/: case.json  known_height.npy  known_material.npy  known_support.npy  mask.npy  metadata.json  target_height.npy  target_material.npy  target_support.npy
repair_cases/Hillside/: case.json  known_height.npy  known_material.npy  known_support.npy  mask.npy  metadata.json  target_height.npy  target_material.npy  target_support.npy
repair_cases/Ice-Biome-Overlap/: case.json  known_height.npy  known_material.npy  known_support.npy  mask.npy  metadata.json  target_height.npy  target_material.npy  target_support.npy
repair_cases/Ice-Mountain-Side/: known_height.npy
repair_cases/Ice-Spikes/: case.json  known_material.npy  known_support.npy  metadata.json  target_height.npy  target_material.npy  target_support.npy
repair_cases/Island-Side/: case.json  known_height.npy  known_material.npy  known_support.npy  mask.npy  metadata.json  target_height.npy  target_material.npy  target_support.npy
repair_cases/Ocean/: case.json  known_height.npy  known_material.npy  known_support.npy  mask.npy  metadata.json  target_height.npy  target_material.npy  target_support.npy
scripts/: analyze_variance.py  export_repair_onnx.py  infer_gui.py  prepare_infer_inputs.py  run_export.py  visualize_export.py
(+18 files in other folders)
